--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "barryvdh/laravel-dompdf": "^3.1",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
-        "maatwebsite/excel": "^1.1"
+        "maatwebsite/excel": "^1.1",
+        "phpoffice/phpspreadsheet": "^5.2"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.16",
